--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,7 +2,7 @@
 parameters:
     database_host: 127.0.0.1
     database_port: 3306
-    database_name: ejercicio_1
+    database_name: ejercicio_3
     database_user: root
     database_password: 12345
     mailer_transport: smtp
@@ -10,3 +10,4 @@ parameters:
     mailer_user: null
     mailer_password: null
     secret: ThisTokenIsNotSoSecretChangeIt
+    database_driver: pdo_mysql
