--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,18 +4,18 @@ services:
   nginx                   :
     image                 : nginx
     ports                 :
-      - "8080:80"
+      - "9999:80"
     networks              :
       - app_network
     volumes               :
       - ./:/code
-      - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on            :
       - symfony
       
   symfony                 :
     build                 : 
-      context             : ./docker
+      context             : .
       dockerfile          : Dockerfile
     links                 :
       - mariadb:mysql
@@ -37,15 +37,14 @@ services:
       MYSQL_DATABASE      : ejercicio_3
     volumes               :
       - mariadb_data:/var/lib/mysql
-      # - ./tableXML.sql:/docker-entrypoint-initdb.d/init.sql
     networks              :
       - app_network
     ports                 :
-      - "127.0.0.1:3306:3306"
+      - "127.0.0.1:9001:3306"
 
 networks                  :
   app_network             :
-    # driver                : bridge
+    driver                : bridge
 
 volumes                   :
   mariadb_data            :
