#7 V1.0.11:Crear Controlador Exportar

--- a/code/app/config/config.yml
+++ b/code/app/config/config.yml
@@ -18,7 +18,7 @@ framework:
     form: ~
     csrf_protection: ~
     validation: { enable_annotations: true }
-    #serializer: { enable_annotations: true }
+    serializer: { enable_annotations: true }
     templating:
         engines: ['twig']
     default_locale: '%locale%'
@@ -29,7 +29,6 @@ framework:
         handler_id: ~
     fragments: ~
     http_method_override: true
-
 # Twig Configuration
 twig:
     debug: '%kernel.debug%'
