--- a/code/composer.json
+++ b/code/composer.json
@@ -21,7 +21,7 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.0.2",
-        "symfony/serializer": "^2.8",
+        "symfony/serializer": "2.8.*",
         "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
         "symfony/symfony": "2.8.*",
         "twig/twig": "^1.0||^2.0"
